# sensitive-term-guard

./: .gitignore  README.md  TROUBLESHOOTING.md  pyproject.toml
demo-docs/: api_documentation.txt  customer_acquisition_strategy.txt  employee_directory_export.txt  legal_financial_analysis.txt  product_roadmap_2024.txt  project_charter_titan.txt  project_falcon_spec.txt  quarterly_business_review.txt  security_incident_report.txt  technical_architecture_eclipse.txt  titancloud_infrastructure.txt
examples/: basic_usage.py  config.yml  sample-terms.txt
src/sensitive_term_guard/: __init__.py  constants.py  exceptions.py  extractors.py  logging_config.py  models.py  scanners.py  utils.py  validation.py
src/sensitive_term_guard/cli/: __init__.py  config.py  extract.py  scan.py
tests/: conftest.py  test_extractors.py  test_integration.py  test_scanners.py
